fixed text and put spacing between the paragraphs

--- a/src/assets/css/_calltoaction.css
+++ b/src/assets/css/_calltoaction.css
@@ -6,6 +6,17 @@
     font-style: normal;
     text-align: center;
     margin: 0 auto;
-    line-height: 1.9;
     width: 65%;
+    line-height: 1.5;
+}
+
+
+
+
+.cta-content .one p {
+    padding-bottom: 2rem;
+}
+
+.cta-content .three p {
+    padding-bottom: 0;
 }
